src/routes/app.css
@import './reset.css';
@import './fonts.css';

:root {
  --accent-color: #ffaa00;
  --main-padding-left-right: 1.5rem;
  --main-content-width: 75%;
  --main-content-width-tablet: 85%;
  --main-content-width-mobile: 100%;
}

body {
  font-family: 'Noto Sans JP', sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Poppins', sans-serif;
}

h2 {
  font-size: 1.375rem;
}

h5 {
  font-size: 1rem;
}

a {
  color: black;
  text-decoration: none;
}

button {
  background: transparent;
  border: none;
  cursor: pointer;
}

a,
button {
  -webkit-tap-highlight-color: transparent;
}

picture,
img {
  display: block;
  width: 100%;
  height: 100%;
}

